--- a/UI/style.css
+++ b/UI/style.css
@@ -14,7 +14,7 @@ h1 {
     text-shadow: 2px 2px 3px rosybrown;
     font-family: Georgia, Times, 'Times New Roman', serif;
 }
-h4 {
+h2 {
     color: #0088dd;
     /* text-shadow: 2px 2px 3px rosybrown; */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -46,6 +46,5 @@ h4 {
     padding: 15px;
 }
 aside {
-    
-
+    float: left;
 }
