--- a/UI/style.css
+++ b/UI/style.css
@@ -4,7 +4,6 @@ body {
     min-width: 720px;
     letter-spacing: 0.1em;
     font-family: serif, sans-serif;
-    /* background-color: #1f1d1d; */
     background-color: whitesmoke;
 }
 h1 {
@@ -16,7 +15,6 @@ h1 {
 }
 h2 {
     color: #0088dd;
-    /* text-shadow: 2px 2px 3px rosybrown; */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .navbar {
@@ -28,7 +26,9 @@ h2 {
     margin: 0px 3px;
 }
 .content {
-    
+    column-count: 2;
+    column-width: 5em; 
+    padding: 15px;   
 }
 .content h2 {
     color: #143f5a;
@@ -46,5 +46,19 @@ h2 {
     padding: 15px;
 }
 aside {
-    float: left;
+    float: right;
+    color: #143f5a;
+    letter-spacing: 0.12 em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 55px;
+}
+aside p {
+    color: #0088dd; 
+    letter-spacing: 0.12 em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans';
+}
+fieldset {
+    color: #143f5a;
+    letter-spacing: 0.12 em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
